...
		}
	}, [fetchStats, fetchInvoices]);

	return (
		<AtomicScreen
			scrollable
			accessibilityLabel="dashboard-screen"
			testID="dashboard-screen"
			safeAreaEdges={[]}
			scrollViewProps={{
				keyboardDismissMode: 'on-drag',
				refreshControl: (
					<RefreshControl
...
